added images and css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content= "ie=edge">
-
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<title>Hello World</title>
@@ -15,16 +15,25 @@
 	</header>
 
 
-	<section class="">
+		<figure class="dogFigure">
+			<img class="dogImg" src="img/dog1.jpeg" alt="Howard" >
+			<figcaption class="dogFigcaption">Howard</figcaption>
+		</figure>
 
-	</section>
+		<figure class="dogFigure">
+			<img class=dogsImg" src="img/dog2.jpeg" alt="Chuck" >
+			<figcaption class="dogFigcaption">Chuck</figcaption>
+		</figure>
 
-	<section class="">
-	</section>
+		<figure class="dogFigure">
+			<img class="dogImg" src="img/dog3.jpeg" alt=" Uncle Tommy" >
+			<figcaption class="dogFigcaption">Uncle Tommy</figcaption>
+		</figure>
 
-
-	<section class="">
-	</section>
+		<figure class="dogFigure">
+			<img class="dogImg" src="img/dog4.jpeg" alt="Spot" >
+			<figcaption class="dogFigcaption">Spot</figcaption>
+		</figure>
 
 	<footer>
 		<p>TM Designed &copy; 2018</p>
