test with git init --bare

--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
 			<img class="dogImg" src="img/dog4.jpeg" alt="Spot" >
 			<figcaption class="dogFigcaption">Spot</figcaption>
 		</figure>
-
+		
+		<figure class="dogFigure">
+			<img class="dogImg" src="img/dog4.jpeg" alt="Spot" >
+			<figcaption class="dogFigcaption">Spot</figcaption>
+		</figure>
+		
 	<footer>
 		<p>TM Designed &copy; 2018</p>
 	</footer>
