clone/edit/push test

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</figure>
 
 		<figure class="dogFigure">
-			<img class=dogsImg" src="img/dog2.jpeg" alt="Chuck" >
+			<img class="dogsImg" src="img/dog2.jpeg" alt="Chuck" >
 			<figcaption class="dogFigcaption">Chuck</figcaption>
 		</figure>
 
