email change test

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 		</figure>
 
 		<figure class="dogFigure">
-			<img class="dogImg" src="img/dog3.jpeg" alt=" Uncle Tommy" >
+			<img class="dogImg" src="img/dog3.jpeg" alt="Uncle Tommy" >
 			<figcaption class="dogFigcaption">Uncle Tommy</figcaption>
 		</figure>
 
 		<figure class="dogFigure">
-			<img class="dogImg" src="img/dog4.jpeg" alt="Spot" >
-			<figcaption class="dogFigcaption">Spot</figcaption>
+			<img class="dogImg" src="img/dog4.jpeg" alt="Larry" >
+			<figcaption class="dogFigcaption">Larry</figcaption>
 		</figure>
 		
 		<figure class="dogFigure">
